--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AWEB-U3-P1-20213TN059</title>
-    <style>
-        .title {
-            color: aqua;
-        }
-        .sub-title {
-            color: red;
-        }
-    </style>
 </head>
+
 <body>
     <h1 class="title">Bienvenid@</h1>
     <h2 class="sub-title">Primer GitHub Page</h2>
+    <a href="page1.html">Pulsame</a>
+    <button type="button" id="btn-pulse">Pulsame</button>
+    <script src="app.js"></script>
 </body>
+
 </html>
